--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "withinviewport": "^3.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.5.0",
