--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "type": "module",
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
+    "cohere-ai": "^6.2.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
